[gd_scene load_steps=43 format=2]

[ext_resource path="res://MainGame/Characters/Players/PumpKing/Sprites/Head.png" type="Texture" id=1]
[ext_resource path="res://MainGame/Characters/Players/PumpKing/PumpKing.gd" type="Script" id=2]
[ext_resource path="res://MainGame/Characters/Addons/HurtBox.gd" type="Script" id=3]
[ext_resource path="res://MainGame/Characters/Players/GeneralPlayer/LadderBox.gd" type="Script" id=4]
[ext_resource path="res://sound effect/SFX/hit.mp3" type="AudioStream" id=5]
[ext_resource path="res://MainGame/Characters/Players/PumpKing/Sprites/Body.png" type="Texture" id=6]
[ext_resource path="res://MainGame/Characters/Players/PumpKing/Sprites/Weapon.png" type="Texture" id=7]
[ext_resource path="res://Assets/particles/light/light.png" type="Texture" id=8]
[ext_resource path="res://sound effect/SFX/Gunshot Sound Effect.mp3" type="AudioStream" id=9]

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 4.14106, 2.82843, 0.378929, 0.277392, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fall_Down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Weapon:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 50, 50, 50, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "toggle_script_off"
}, {
"args": [  ],
"method": "toggle_script_on"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 7, 6, 7, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Head:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Head:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Weapon:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 0, 3 ), Vector2( 0, 2 ), Vector2( 0, 3 ), Vector2( 0, 2 ), Vector2( 0, 3 ), Vector2( 0, 2 ), Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jump_Up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Head:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Weapon:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Weapon:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Head:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.9 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HurtBox:collision_mask")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=41]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Head:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Weapon:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 0, -2 ), Vector2( 0, 4 ), Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "spawn"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "toggle_script_off"
}, {
"args": [  ],
"method": "toggle_script_on"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 13.25 )

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Fall_Down"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Jump_Up"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=19]
resource_local_to_scene = true
states/Attack/node = SubResource( 10 )
states/Attack/position = Vector2( 329, 75 )
states/Fall_Down/node = SubResource( 21 )
states/Fall_Down/position = Vector2( 625, 293 )
states/Hurt/node = SubResource( 29 )
states/Hurt/position = Vector2( 814, 209 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 329, 183 )
states/Jump_Up/node = SubResource( 22 )
states/Jump_Up/position = Vector2( 338, 277 )
states/Walk/node = SubResource( 12 )
states/Walk/position = Vector2( 619, 83 )
transitions = [ "Idle", "Walk", SubResource( 13 ), "Walk", "Idle", SubResource( 14 ), "Idle", "Attack", SubResource( 15 ), "Attack", "Idle", SubResource( 16 ), "Walk", "Attack", SubResource( 17 ), "Attack", "Walk", SubResource( 18 ), "Jump_Up", "Idle", SubResource( 24 ), "Fall_Down", "Idle", SubResource( 25 ), "Jump_Up", "Fall_Down", SubResource( 26 ), "Hurt", "Idle", SubResource( 35 ), "Hurt", "Walk", SubResource( 39 ), "Hurt", "Attack", SubResource( 40 ), "Hurt", "Fall_Down", SubResource( 42 ), "Hurt", "Jump_Up", SubResource( 43 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 114 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 7, 4.5 )

[node name="PumpKing" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.7

[node name="ShootingPoint" type="Node2D" parent="."]
position = Vector2( 3, 12 )

[node name="Sprites" type="Control" parent="."]
light_mask = 0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 1, 0.9 )

[node name="Body" type="Sprite" parent="Sprites"]
position = Vector2( 20, 26 )
texture = ExtResource( 6 )
hframes = 8

[node name="Weapon" type="Sprite" parent="Sprites"]
position = Vector2( 19, 30 )
texture = ExtResource( 7 )
offset = Vector2( 0, 2 )
hframes = 4

[node name="Head" type="Sprite" parent="Sprites"]
position = Vector2( 20, 16 )
texture = ExtResource( 1 )
offset = Vector2( 0, -2 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/Attack = SubResource( 3 )
anims/Fall_Down = SubResource( 4 )
anims/Hurt = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Jump_Up = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Walk = SubResource( 41 )
anims/spawn = SubResource( 28 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 0, 2.25 )
shape = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )

[node name="LadderBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderBox"]
position = Vector2( 0, 16.5 )
shape = SubResource( 27 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -3, 2 )
texture = ExtResource( 8 )
texture_scale = 0.1
energy = 0.7
shadow_enabled = true
shadow_gradient_length = 3.0

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[connection signal="body_entered" from="LadderBox" to="LadderBox" method="_on_LadderBox_body_entered"]
[connection signal="body_exited" from="LadderBox" to="LadderBox" method="_on_LadderBox_body_exited"]
